--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,11 @@ a {
   text-decoration: none;
 }
 
+p {
+  line-height: 1.5;
+  font-size: 17px;
+}
+
 .layout-container {
   width: 95%;
   max-width: 375px;
@@ -30,4 +35,12 @@ a {
   border: 1px solid #ccc;
   overflow: hidden;
   height: 100vh;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: 100%;
 }
